--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,10 +9,10 @@ environment:
 
 dependencies:
   
-  audioplayers: 5.1.0
   cupertino_icons: ^1.0.2
   dio: 5.3.3
   get: 4.6.6
+  just_audio: 0.9.35
 
   flutter:
     sdk: flutter
